[3712] Add support for displaying child and border nodes within border nodes
Bug: https://github.com/eclipse-sirius/sirius-web/issues/3712
Signed-off-by: Florian ROUËNÉ <florian.rouene@obeosoft.com>